[gd_scene load_steps=6 format=3 uid="uid://bl6qxp1wyfawo"]

[ext_resource type="Script" path="res://Scripts/AdministradorEspacio.gd" id="1_wssec"]
[ext_resource type="Texture2D" uid="uid://35sp7vgsy047" path="res://Sprites/ventanaArriba.png" id="2_8sm7g"]
[ext_resource type="FontFile" uid="uid://dfg1k6mc5n5vw" path="res://Fuentes/Pixellari.ttf" id="3_xdvxi"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_eey0o"]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="LabelSettings" id="LabelSettings_m70j7"]
font = ExtResource("3_xdvxi")
font_size = 32
font_color = Color(0.490196, 0.490196, 0.490196, 1)

[node name="AdministradorDisco" type="Control" groups=["Ventana"]]
texture_filter = 1
custom_minimum_size = Vector2(400, 200)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -752.0
offset_bottom = -327.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wssec")

[node name="BarraTitulo" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(0, 20)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 2
texture = ExtResource("2_8sm7g")
region_rect = Rect2(-230, 0, 360, 16)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Cuerpo" type="Panel" parent="."]
layout_mode = 2
offset_top = 20.0
offset_right = 400.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Cuerpo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Cuerpo/VBoxContainer"]
material = SubResource("CanvasItemMaterial_eey0o")
use_parent_material = true
custom_minimum_size = Vector2(300, 100)
layout_direction = 1
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="Cuerpo/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(380, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
min_value = 1.0
max_value = 500.0
step = 1.0
value = 50.0

[node name="Label" type="Label" parent="Cuerpo/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_m70j7")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="BarraTitulo" to="." method="_on_barra_titulo_mouse_entered"]
[connection signal="mouse_exited" from="BarraTitulo" to="." method="_on_barra_titulo_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
